--- a/client/SearchPatient.html
+++ b/client/SearchPatient.html
@@ -28,11 +28,12 @@
                     <div class="row">
                       <div class="col-sm-3">
                         <div class="row">
-                              <h6 class="mb-0">Patient ID</h6>
+                              <h6 class="mb-0">Patient Account</h6>
                             
-                            <div class="mb-3">
+                            <div class="mb-3 search-pacient">
+                              <img src="img/user_50px.png" id="imgPacient">
                               <label for="exampleInputName" class="form-label"></label>
-                              <input type="text" class="form-control" id="exampleInputName" placeholder="ID" required>
+                              <input type="password" class="form-control" id="exampleInputName" placeholder="Account" required>
                               <div class="invalid-feedback">Name can't be blank</div>
                               <div class="valid-feedback">Looks good!</div>
                               
