--- a/client/Doctor.html
+++ b/client/Doctor.html
@@ -63,12 +63,12 @@
 
                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                       <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"></svg>Place where it operates</h6>
-                      <span class="text-secondary">Mexico</span>
+                      <span class="text-secondary">Playa del Carmen</span>
                     </li>
 
                     <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap">
                       <h6 class="mb-0"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-instagram mr-2 icon-inline text-danger"></svg>Speciality</h6>
-                      <span class="text-secondary">Mexico</span>
+                      <span class="text-secondary">General</span>
                     </li>
 
 
@@ -94,7 +94,7 @@
                         <h6 class="mb-0">Cedula</h6>
                       </div>
                       <div class="col-sm-9 text-secondary">
-                        O-
+                        123456789
                       </div>
                     </div>
                     <hr>
